# big_food

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backup  Home.py  README.md  app.py  backup.sh  docker-compose-dev.yaml  docker-compose.yaml  lang.py  models.py  pyproject.toml  st_app.py  test_streamlit.py  utils.py
pages/: Controlli_e_integrità_database.py  Fornitori.py  Gestione_Database.py  Materie_Prime.py  Prodotti_e_Semilavorati.py  Reportistica.py  database_management.py
