[tool.poetry]
name = "big-food"
version = "0.1.0"
description = ""
authors = ["Diego Droghini <diego.droghini@xtechnologies.it>"]
readme = "README.md"
 package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
sqlalchemy = "^2.0.29"
pymongo = "^4.7.0"
pydantic = "^2.7.1"
pydantic-mongo = "^2.3.0"
python-barcode = "^0.15.1"
streamlit-extras = "^0.4.2"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
